src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Additions__c</fullName>
        <label>Additions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Gross_Revenue__c</fullName>
        <formula>Gross_Revenue__c + Additions__c + Adjustments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustments__c</fullName>
        <label>Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due__c</fullName>
        <formula>(Gross_Revenue__c +  Additions__c) - Payments_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BEO_Auto_Number__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>BEO # Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BEO__c</fullName>
        <formula>TEXT(Year(DATEVALUE(CreatedDate))) + &quot;-&quot; + BEO_Auto_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BEO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beverage_Amount__c</fullName>
        <label>Beverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beverage_Liquor_Amount__c</fullName>
        <formula>Beverage_Amount__c  +  Liquor_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beverage &amp; Liquor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beverage_Liquor_Service_Charges__c</fullName>
        <formula>Beverage_Service_Charges__c  +  Liquor_Service_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beverage &amp; Liquor Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beverage_Liquor_Taxes__c</fullName>
        <formula>Beverage_Taxes__c  +  Liquor_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beverage &amp; Liquor Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beverage_Notes__c</fullName>
        <label>Beverage Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Beverage_Service_Charges__c</fullName>
        <label>Beverage Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beverage_Taxes__c</fullName>
        <label>Beverage Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Details__c</fullName>
        <inlineHelpText>Use this field to track any special billing arrangements that your client might ask for after the banquet is posted/closed.</inlineHelpText>
        <label>Billing Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <defaultValue>IF(AND($RecordType.Name=&apos;Member Sponsored Event&apos;),NOW(),null)</defaultValue>
        <label>Booked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Fee__c</fullName>
        <label>Cancellation Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reason 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Catering_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catering Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may only select Contacts with an &apos;Employee&apos; Record Type</errorMessage>
            <filterItems>
                <field>Contact.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Catering Manager)</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charges_Less_Deposits__c</fullName>
        <formula>Total_Charge_Amount__c -  Deposit_Amount_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charges Less Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CleanupTime__c</fullName>
        <formula>IF(AND(NOT(ISNULL(EndTime__c)), NOT(ISBLANK(EndTime__c)), NOT(ISPICKVAL(Cleanup_Time__c,&apos;&apos;))), IF(ISPICKVAL(Cleanup_Time__c,&apos;Half Hour&apos;), EndTime__c + 0.02083, IF(ISPICKVAL(Cleanup_Time__c,&apos;1 Hour&apos;), EndTime__c + 0.04166, EndTime__c + 0.08333)), IF(AND(NOT(ISNULL(EndTime__c)), NOT(ISBLANK(EndTime__c))), EndTime__c, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CleanupTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cleanup_Time__c</fullName>
        <label>Cleanup Time</label>
        <picklist>
            <picklistValues>
                <fullName>Half Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Due_Date__c</fullName>
        <label>Contract Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Closing__c</fullName>
        <label>Days Since Closing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount_Received__c</fullName>
        <description>Total Deposit Required</description>
        <label>Deposit Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Due_Date__c</fullName>
        <label>Deposit Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Received_Date__c</fullName>
        <label>Deposit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Remaining__c</fullName>
        <formula>Deposit_Amount__c  -  Deposit_Amount_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Deposit Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dining_Minimum__c</fullName>
        <label>Dining Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>DATEVALUE( StartTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Location__c</fullName>
        <label>External Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Notes__c</fullName>
        <label>Fee Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Food_Amount__c</fullName>
        <label>Food Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Amount__c</fullName>
        <formula>Food_Amount__c  +  Beverage_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food &amp; Beverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Service_Charges__c</fullName>
        <formula>Beverage_Service_Charges__c  +  Food_Service_Charges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food &amp; Beverage Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Beverage_Taxes__c</fullName>
        <formula>Beverage_Taxes__c  +  Food_Taxes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food &amp; Beverage Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Notes__c</fullName>
        <label>Food Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Food_Service_Charges__c</fullName>
        <label>Food Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Food_Taxes__c</fullName>
        <label>Food Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Date__c</fullName>
        <formula>CASE( MOD( DATEVALUE( StartTime__c ) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;) &amp; &apos;, &apos; &amp; CASE( MONTH(DATEVALUE( StartTime__c )), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;&quot;) &amp; &apos; &apos; &amp; TEXT( DAY(DATEVALUE( StartTime__c ))) &amp; &apos;, &apos; &amp; TEXT( YEAR(DATEVALUE( StartTime__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wedding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lecture &amp; Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gratuity_Amount__c</fullName>
        <label>Gratuity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gratuity_Service_Charges__c</fullName>
        <label>Gratuity Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gratuity_Taxes__c</fullName>
        <label>Gratuity Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hover_Details__c</fullName>
        <label>Hover Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IRS_Compliance_Form_Received_Date__c</fullName>
        <label>IRS Compliance Form Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IRS_Compliance_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IRS Compliance Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_Amount__c</fullName>
        <label>Labor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Service_Charges__c</fullName>
        <label>Labor Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Taxes__c</fullName>
        <label>Labor Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liquor_Amount__c</fullName>
        <label>Liquor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liquor_Service_Charges__c</fullName>
        <label>Liquor Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liquor_Taxes__c</fullName>
        <label>Liquor Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to manually exempt taxes from particular charges</description>
        <label>Manual Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Set</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Guarantee_Guests__c</fullName>
        <label>Minimum Guarantee Guests</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Fees_Amount__c</fullName>
        <label>Miscellaneous Fees Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Fees_Service_Charges__c</fullName>
        <label>Miscellaneous Fees Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Fees_Taxes__c</fullName>
        <label>Miscellaneous Fees Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order#</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Amount__c</fullName>
        <label>Other Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Cancellation_Reason__c</fullName>
        <label>Other Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Event_Notes__c</fullName>
        <label>Other Event Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Service_Charges__c</fullName>
        <label>Other Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Taxes__c</fullName>
        <label>Other Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Override_Account_To_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Account To Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Cancel_By__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Cancel By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Deposit_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Deposit Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Sales Manager)</relationshipLabel>
        <relationshipName>Reservations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Reservation_Flag__c</fullName>
        <formula>IF(Has_Children__c, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Reservation Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Reservation</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Reservations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Contact_Email__c</fullName>
        <formula>Payment_Contact__r.Email</formula>
        <label>Payment Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Contact_Phone__c</fullName>
        <formula>Payment_Contact__r.Phone</formula>
        <label>Payment Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ReservationsPC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payments_Received__c</fullName>
        <label>Payments Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Close_Date_Time__c</fullName>
        <label>Post Close Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Price_Per_Plate_After_Tax_Service__c</fullName>
        <formula>IF(Minimum_Guarantee_Guests__c = 0,0,Total_Charge_Amount__c/Minimum_Guarantee_Guests__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Per Plate After Tax &amp; Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Per_Plate_Before_Tax_Service__c</fullName>
        <formula>IF( Minimum_Guarantee_Guests__c = 0, 0 , Revenue__c /  Minimum_Guarantee_Guests__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Per Plate Before Tax &amp; Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Private_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Show who is attending this event to other members</inlineHelpText>
        <label>Private Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rental_Amount__c</fullName>
        <label>Rental Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Service_Charges__c</fullName>
        <label>Rental Service Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Taxes__c</fullName>
        <label>Rental Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Room_Setup_Details__c</fullName>
        <label>Room Setup Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may only select Contacts with an &apos;Employee&apos; Record Type</errorMessage>
            <filterItems>
                <field>Contact.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Service Manager)</relationshipLabel>
        <relationshipName>Reservations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SetupTime__c</fullName>
        <formula>IF(AND(NOT(ISNULL(StartTime__c)), NOT(ISBLANK(StartTime__c)), NOT(ISPICKVAL(Setup_Time__c,&apos;&apos;))), IF(ISPICKVAL(Setup_Time__c,&apos;Half Hour&apos;), StartTime__c - 0.02083, IF(ISPICKVAL(Setup_Time__c,&apos;1 Hour&apos;), StartTime__c - 0.04166, StartTime__c - 0.08333)), IF(AND(NOT(ISNULL(StartTime__c)), NOT(ISBLANK(StartTime__c))), StartTime__c, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SetupTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Setup_Time__c</fullName>
        <label>Setup Time</label>
        <picklist>
            <picklistValues>
                <fullName>Half Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setup_Type__c</fullName>
        <label>Setup Type</label>
        <picklist>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crescent Rounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L-Shaped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Round Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U-Shaped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signed_Contract_Received_Date__c</fullName>
        <label>Signed Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SponsoringMember__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sponsoring Member</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Your member sponsor must have a record type of Member.</errorMessage>
            <filterItems>
                <field>Contact.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Member</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Sponsoring Member)</relationshipLabel>
        <relationshipName>ReservationsContact</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sponsoring_Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account to Bill</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events (Account to Bill)</relationshipLabel>
        <relationshipName>EventsSC</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Change</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>